--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1230,6 +1230,8 @@ span.feature-review {margin-left: 10px;}
         max-width: 300px;
         padding: 15px;
         border-radius: 10px;
+        display: flex;
+        flex-direction: column;
     }
     .login-buttom {
         float: right;
